syntax = "proto3";

import "google/protobuf/timestamp.proto";

message UserDocument {
    // Object id from MongoDB
    string userid = 1;
    
    // Name of this user
    string username = 2;

    // Password of this user
    string password = 3;

    // Creation timestamp
    google.protobuf.Timestamp created_at = 4;
  }

message QueryForUser {
    string userid = 1;
  }

message NewUser {
    string username = 1;
    string password = 2;
  }

message QueryError {
    ErrorType error_type = 1;
    string detail = 2;

    enum ErrorType {
        UNSPECIFIED = 0;
        NO_SUCH_USER = 1;
        INVALID_ID = 2;
      }
  }

message PutError {
    ErrorType error_type = 1;
    string detail = 2;

    enum ErrorType {
        UNSPECIFIED = 0;
        SCHEMA_FAIL = 1;
        ALREADY_EXISTS = 2;
      }
  }


message GetUser {
    oneof result {
        UserDocument user = 1;
        QueryError err = 2;
      }
  }

message CreatedUser {
    oneof result {
        UserDocument new_user = 1;
        PutError err = 2;
      }
  }

service UserDocumentService {
    rpc GetUserDocument(QueryForUser) returns (GetUser);
    rpc CreateUserDocument(NewUser) returns (CreatedUser);
    //rpc UpdateUserDocument(UserModification) returns (UserDocument);
    //rpc DeleteUserDocument(RemoveUserRequest) returns (UserDocument);
  }
